# OCPQ-Anonymity

./: Cargo.toml  LICENSE  NOTICE  README.md
backend/: .gitignore
backend/kanon_demo/: Cargo.toml
backend/kanon_demo/data/: bpic2017-ocel2-synth.json
backend/kanon_demo/src/: main.rs
backend/ocpq_cli/: Cargo.toml
backend/shared/src/: lib.rs
backend/shared/src/kanon/: activation.rs  fingerprint.rs  mod.rs  policy.rs  properties.rs  report.rs
backend/shared/src/kanon/tests/: mod.rs  test_activation.rs  test_fingerprint.rs  test_policy.rs  test_properties.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/components/ui/: alert-dialog.tsx  calendar.tsx  date-time-range-input.tsx
frontend/src/routes/visual-editor/helper/box/: filter-helpers.tsx  variable-names.tsx
frontend/src/routes/visual-editor/helper/box/filter-editors/: registry.tsx
tauri/src-tauri/: tauri.conf.json
