[package]
name = "kanon-demo"
version = "0.1.0"
edition = "2021"
description = "Prototype demo for the k-anonymity framework for OCPQ."

[[bin]]
name = "kanon_demo"
path = "src/main.rs"

[dependencies]
ocpq-shared = { path = "../shared" }
process_mining = { git = "https://github.com/aarkue/rust4pm", features = ["ocel-sqlite"], branch = "feat/oced-paths" }
serde_json = "1.0"
