[package]
name = "ocpq_cli"
version = "0.11.2"
edition = "2021"


[dependencies]
serde = {version = "1.0.192" , features = ["derive"]}
serde_json = "1.0.108"
ocpq-shared = {path = "../shared"}
rayon = "1.8.0"
itertools = "0.11.0"
chrono = "0.4.33"
uuid = "1.7.0"
clap = {version = "4.5.26", features = ["derive"]}
